Istio/Examples/Nginx/nginx-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-dest-rule
spec:
  host: nginx-svc
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
  subsets:
  - name: v1
    labels:
      version: v1  
  - name: v2
    labels:
      version: v2
