Istio/Examples/Nginx/nginx-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:    
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - nginx-gateway
  http:                  
  - match:
    - uri:
        exact: /nginx
    rewrite:
      uri: /
    route:
    - destination:
        host: nginx-svc
        subset: v1
        port:
          number: 80
